classe Pixel ajouté et terminée

--- a/css/main.css
+++ b/css/main.css
@@ -196,3 +196,7 @@ textarea {
         page-break-after: avoid;
     }
 }
+/* ==========================================================================
+   global css
+   ========================================================================== */
+   
